FileBrowser: fixed left panel icon offsets.
R=serya@chromium.org
BUG=chromium-os:28236
TEST=Manual. Notice, that icons aren't cut off now.

Review URL: http://codereview.chromium.org/9846001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@128465 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 9ec39638198bf85a5f19e74c81a0feb4326d5e73

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -260,7 +260,7 @@ li.root-item > .spacer {
 .root-label {
   -webkit-padding-start: 38px;
   background-repeat: no-repeat;
-  background-position: 0 2px;
+  background-position: left center;
 }
 
 .breadcrumbs .root-label {
@@ -270,7 +270,6 @@ li.root-item > .spacer {
 
 .root-label[icon=downloads] {
   background-image: url('../images/downloads_28x28.png');
-  background-position: 0 -2px;
 }
 
 .breadcrumbs .root-label[icon=downloads] {
@@ -279,17 +278,14 @@ li.root-item > .spacer {
 
 .root-label[icon=gdata] {
   background-image: url('../images/gdata_28x28.png');
-  background-position: 0 -2px;
 }
 
 .breadcrumbs .root-label[icon=gdata] {
   background-image: url('../images/gdata_24x24.png');
-  background-position: 0 -2px;
 }
 
 .root-label[icon=archive] {
   background-image: url('../images/archive_28x28.png');
-  background-position: 0 -2px;
 }
 
 .breadcrumbs .root-label[icon=archive] {
@@ -298,12 +294,10 @@ li.root-item > .spacer {
 
 .root-label[icon=removable] {
   background-image: url('../images/usb_source_28x28.png');
-  background-position: 0 -3px;
 }
 
 .breadcrumbs .root-label[icon=removable] {
   background-image: url('../images/usb_source_24x24.png');
-  background-position: 0 0;
 }
 
 .root-label[icon=unreadable] {
